# whatspkg

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: pr.yml
examples/: basic.rs
src/: error.rs  lib.rs  transport.rs
src/binary/: consts.rs  decoder.rs  encoder.rs  mod.rs  token.rs
src/client/: mod.rs  send.rs
src/events/: mod.rs
src/pairing/: mod.rs
src/socket/: framed.rs  mod.rs  noise.rs  ws.rs
src/store/: memory.rs  mod.rs
src/types/: jid.rs  mod.rs
